--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "node server.js & json-server --watch db.json --port 5000",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
